--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,5 +94,6 @@
         "thread": "cpp",
         "typeindex": "cpp",
         "valarray": "cpp"
-    }
+    },
+    "git.ignoreLimitWarning": true
 }
